[tool.poetry]
name = "xtalk"
version = "0.1.0"
description = "Highly concurrent AI agentic framework lib"
authors = ["Henrik Djurestål <henrik.djurestal@gmail.com>", "William Malmgren Hanning <williammalmgrenhanning@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
